# aristotle

./: .dockerignore  .gitignore  CHANGELOG.md  CHECKER.md  Dockerfile  GEAR.md  KnownIssues.md  LEARN.md  PLAN.md  R34-batch-B-verification-report.md  README.md  README.zh-CN.md  REFLECT.md  REFLECTOR.md  RESET.md  RESET.zh-CN.md  REVIEW.md  ROADMAP.md  SKILL.md  TDD_PIPELINE_FULL_REPORT.md  TDD_PIPELINE_REVIEW_REPORT.md  TDD_TEST_REPORT.md  TESTING.md  TESTING.zh-CN.md  TESTING_STATUS-v1.1.0.zh-CN.md  TODO.md  docker-compose.yml  install.ps1  install.sh  package.json  pyproject.toml  test.sh  test_e2e_phase2.py  uninstall.sh  v2-backlog-new.md
archive/: progress-v1.0.md  todo-v0.2.md
aristotle_mcp/: __init__.py  _audit_log.py  _cli.py  _intervention_bridge.py  _orch_event.py  _orch_parsers.py  _orch_prompts.py  _orch_review.py  _orch_start.py  _orch_state.py  _tools_feedback.py  _tools_ki_doc.py  _tools_reflection.py  _tools_reset.py  _tools_rollback.py  _tools_rules.py  _tools_sync.py  _tools_undo.py  _utils.py  config.py  evolution.py  frontmatter.py  git_ops.py  migration.py  models.py  server.py  types.py
auto-reflection-feature/: .coverage
design_plan/: 00-overview.md  01-interfaces.md  02-phase1-observer.md  03-phase2-test-gate.md  04-phase3-semantic.md  05-phase4-merge.md  06-phase5-docs.md  KnownIssues.md  adr.md  appendices.md  known-issues.md  merge-intervention-to-mcp.md  progress.md  quality-assurance-implementation-plan.md  quality-assurance-plan-review-fixes.md  review-pass1-fixes.md  review-precision-pass.md  watchdog-intervention-architecture.md
(+358 files in other folders)
